# PyMake

./: .gitignore  .pre-commit-config.yaml  PyMake.yaml  README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml
PyMake/: decorators.py  exceptions.py  main.py  tokens.py
PyMake/builder/: atom.py  base_plugin.py  block.py  cmd_plugin.py  env_plugin.py  var_plugin.py
PyMake/builder/cmd/: section.py
PyMake/builder/envs/: section.py
PyMake/builder/plugin/: base_plugin.py  cmd_plugin.py  env_plugin.py  var_plugin.py
PyMake/builder/plugin/utils/: atom.py  block.py
PyMake/builder/utils/: block.py
PyMake/builder/var/: atom.py  block.py  section.py
PyMake/console/: __init__.py  helpers.py  inspect.py  list.py  run.py
PyMake/console/builder/: abc_builder.py  builder.py  cmd_builder.py  env_builder.py  var_builder.py
PyMake/console/parser/: parser.py
PyMake/parser/: base_plugin.py  cmd_plugin.py  env_plugin.py  parser.py  tokens.py  var_plugin.py
PyMake/parser/plugin/: base_plugin.py  cmd_plugin.py  env_plugin.py  var_plugin.py
PyMake/parser/plugin/utils/: states.py  tokens.py
PyMake/parser/utils/: exceptions.py  states.py  tokens.py  type_alias.py
doc/: Target_Top_Level_Element.md  expression.md  global_var.md  stages.md  var_declaration.md  var_expansion.md  var_parsing.md  variables.md
scripts/: bump_version.py
tests/: test_tokeniser.py
tests/builder/: test_tokens.py
tests/builder/cmd/: test_cmd.py  test_section.py
tests/builder/env/: test_section.py
tests/builder/var/: test_atom.py  test_block.py  test_section.py  test_state.py
tests/console/: conftest.py  test_builder_invalid.py  test_builder_valid.py
tests/console/builder/: conftest.py  test_builder_invalid.py  test_cmd.py
tests/console/parser/: conftest.py  four_keyword_basic_in_order.py  four_positional.py  test_all_quiet.py  test_all_quiet_123.py  test_invalid_state.py  test_invalid_stmts.py  test_list12.py  test_list23.py  test_null.py  test_one_all.py  test_one_keyword_basic_in_order.py  test_one_list1.py  test_one_positional.py  test_three_keywords_basic_in_order.py  test_three_positional.py  test_two_keywords_basic_in_order.py  test_two_positional.py  test_var123_list1.py  test_var13_list1.py  test_var3_list1.py  test_var_interpolation.py
tests/parser/: conftest.py  test_cmd_parser.py  test_env_parser.py  test_parser.py  test_tokens.py  test_var_parser.py
tests/test_builder/: test_block.py
tests/test_main/: PyMake.yaml  test_main.py
